Feature/98 회원 목록 조회 api 수정 및 문서 반영 (#100)
* feat: 회원 목록 조회 cursor 제거

* test: 회원 목록 조회 테스트 수정

* docs: 회원 목록 조회 문서 수정